# GitAuto

./: Cargo.toml  README.md
prompts/: qwen.txt
src/: arg.rs  main.rs
src/core/: core_helper.rs  input.rs  mod.rs  string.rs  tab.rs
src/core/config/: controller.rs
src/core/git/: git_check.rs  git_controller.rs  git_helper.rs  git_see.rs  mod.rs
src/core/model/: helper.rs  hub.rs  mod.rs
src/core/model/models/: base.rs  mod.rs  phi2.rs  qwen.rs  tiny.rs
src/ui/: commit.rs  config.rs  mod.rs  model.rs
