[package]
name = "GitAuto"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
clap = "4.6.0" 
color-eyre = "0.6.5"
confy = "2.0.0"
directories = "6.0.0"
git2 = { version = "0.20.4", features = ["ssh", "https"] }
hf-hub = "0.5.0"
inquire = "0.9.4"
owo-colors = "4.3.0"
serde = { version = "1.0.152", features = ["derive"] }
