[package]
name = "GitAuto"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/Darkx32/GitAuto"

[dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
clap = "4.6.1" 
color-eyre = "0.6.5"
confy = "2.0.0"
directories = "6.0.0"
git2 = { version = "0.20.4", features = ["ssh", "https"] }
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"]}
inquire = "0.9.4"
owo-colors = "4.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.22.2"

[features]
cuda = ["candle-core/cuda"]
accelerate = ["candle-core/accelerate"]
mkl = ["candle-core/mkl"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
